--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,4 +130,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="messages">Messages</string>
     <string name="user">User</string>
+    <string name="logout">logout</string>
 </resources>
